fixed spacing between 2nd and 3rd section

--- a/styles2.css
+++ b/styles2.css
@@ -28,6 +28,7 @@ img{
     grid-template-columns: 50% 20%; 
     grid-template-rows:25% 1%;
     padding-left: 100px;
+    height: 300px;
 }
 .dedicate{
 font-size: 48px;
@@ -39,7 +40,7 @@ width:auto;
 .members{
 grid-column: 1;
 grid-row: 2;
-padding-top: 15px;
+padding-top: 35px;
 
 
 
@@ -65,7 +66,7 @@ background-color: red;
 .button{
     grid-column: 1;
     grid-row: 2;
-    padding-top: 70px;
+    padding-top: 80px;
 }
 
 
